# Maths

./: .gitignore  Readme.md
HoTT/apps/MainApp/: backend.py  launch.sh  mainapp.py
HoTT/src/APIs/: chapters.py
HoTT/src/Grammar/: HoTT.bnf  hott_parser.py
HoTT/src/Parsing/: general_parser.py
HoTT/src/Parsing/Grammar/: HoTT.bnf  examples.py  hott_parser.py
HoTT/src/Parsing/LaTeX/: latex.bnf  latex_parser.py
HoTT/src/UI/: latex_to_ui.py  math_container.py
HoTT/src/Utils/: logging.py  utils_path.py  utils_test.py
HoTT/src/latex/: preamble.tex
HoTT/src/latex/Foundations/TypeTheory/: basic_constructions.tex  contexts.py  type_theory.tex
HoTT/src/programs/: parse_hott.py  parse_latex.py
HoTT/tests/: run_all.py
HoTT/tests/Parsing/: parsing.py
HoTT/tests/Parsing/Grammar/: grammar.py
HoTT/tests/Parsing/Grammar/DeductiveSystem/: context.py  declaration.py  inductive_types.py  inference.py  judgment.py  logic.py  motives.py
HoTT/tests/Parsing/Grammar/HoTT/: computation_rule.py  elimination_rule.py  elimination_rules.py  formation_rule.py  formation_rules.py  hott.py  introduction_rule.py  introduction_rules.py  terms_simple.py
HoTT/tests/Parsing/Grammar/Infrastructure/: constants.py  infrastructure.py  universe.py  variable.py
HoTT/tests/Parsing/LaTeX/: latex_simple.py
HoTT/tests/UI/: latex_to_ui.py  ui.py
ZFC/cpp/: CMakeLists.txt
ZFC/cpp/src/: main.cpp
ZFC/cpp/src/language/: text.cpp
ZFC/cpp/src/language/lexer/: text.cpp  text.hpp
ZFC/cpp/src/language/lexer/constants/: constant_set.cpp  constant_set.hpp
ZFC/cpp/src/language/lexer/logic/: binary_symbol.cpp  binary_symbol.hpp  quantifier.cpp  quantifier.hpp  unary_symbol.cpp  unary_symbol.hpp
ZFC/cpp/src/language/lexer/set/: binary_symbol.cpp  binary_symbol.hpp  inclusion.cpp  inclusion.hpp  unary_symbol.cpp  unary_symbol.hpp
ZFC/cpp/src/language/lexer/variables/: variable_set.cpp  variable_set.hpp
ZFC/cpp/src/utils/constant/: constants.hpp
ZFC/cpp/src/utils/log/: log_probes.hpp  logger.cpp  logger.hpp
